[package]
edition = "2021"
name = "polywrap-client-hmny"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polywrap_core_macros = "0.1.10"
polywrap_msgpack_serde = "0.0.2"
polywrap_uri = "0.1.10"
serde = {version = "1.0.193", features = ["derive"]}
tokio = {version = "1.35.0", features = ["full"]}
